welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:16: error: type mismatch;
 found   : Unit
 required: Boolean
			if (cb = a+b-2)
                               ^