welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.code
var diag = 0;
override def run() {

var a = getMondeHauteur()
var b = getMondeLargeur()
var x = getX()
var y = getY()
var cb = 1

ecritMessage(diag)

while (x != a-1 || y != b-1)
{if (y == 0 || x == a-1)
	{if (cb <7) {y = cb; x = 0; cb = (cb +1)}
		else { 
			if (cb = a+b-2)
			{y=b-1; x=a-1;}			
			else {y = b-1; x = cb%7; cb = (cb +1)}
			}
	}
	else {x = x+1; y = y-1;}


setPos(x, y)
diag = diag +1
ecritMessage(diag)
	}

}





